--- a/faculty.html
+++ b/faculty.html
@@ -135,8 +135,9 @@
             University, clerking at DC’s Public Defender Service, time as
             a producer, actor, director, a trainer of lead teachers. He
             has been, for the last fifteen years, a Professor at NYU Tisch’s
-            elite Graduate Acting Program. He is the founder of the Miller
-            Voice Method® and through decades of field and scientific research
+            elite Graduate Acting Program. He is the founder of the 
+            <a href='https://www.millervoicemethod.com' target='_blank'>Miller
+            Voice Method®</a> and through decades of field and scientific research
             has developed a transformational and repeatable way to embody
             presence and empathy for peak performances that sustain both
             the audience’s and speaker’s attention.
