--- a/studio.html
+++ b/studio.html
@@ -47,9 +47,9 @@
             into something easy to use for actors today. His approach is
             experienced in his teaching and expressed in his writing. <em>The
             Michael Chekhov Handbook, for the Actor</em> can be purchased
-            <a class='studio-link' href='http://www.dramabookshop.com/book/9780415496728'>here</a>.
+            <a class='studio-link' href='http://www.dramabookshop.com/book/9780415496728'target='_blank'>here</a>.
             Additionally a few <a class='studio-link' target='_blank' href='assets/articles.pdf'>articles</a>
-            by Lenard are included here for you–gratis!
+            by Lenard are included here for you–gratis! 
           </div>
         </section>
 
