create terms chart

--- a/studio.html
+++ b/studio.html
@@ -43,10 +43,9 @@
           <iframe class='studio-video' width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
           <div class='studio-video-text'>
             Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
-            in a practical and imaginative way, clearly translating the technique
-            into something easy to use for actors today. His approach is
-            experienced in his teaching and expressed in his writing. <em>The
-            Michael Chekhov Handbook, for the Actor</em> can be purchased
+            in a practical and imaginative way. His teaching and writings are celebrated
+            for clearly translating the technique into something easy to use for actors today.
+            His book, <em>The Michael Chekhov Handbook, for the Actor</em> can be purchased
             <a class='studio-link' href='http://www.dramabookshop.com/book/9780415496728'>here</a>.
             Additionally a few <a class='studio-link' target='_blank' href='assets/articles.pdf'>articles</a>
             by Lenard are included here for you–gratis!
