--- a/lenard.html
+++ b/lenard.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:100" rel="stylesheet">
+    <script src='assets/chart.js' charset="utf-8"></script>
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -81,8 +82,33 @@
             <div class='lenard-image-source'>William Blake</div>
           </section>
         </section>
+
+        <section class='lenard-chart-container'>
+          <h3 class='section-header'>LENARD'S APPROACH</h3>
+          <div class='lenard-chart'>
+            <img class='chart-image' src='assets/images/diagram.jpeg' />
+            <div class='chart-explanation'>
+              <ul class='chart-terms'>
+                <li class='chart-term'>ENERGY</li>
+                <li class='chart-term'>IMAGINATION</li>
+                <li class='chart-term'>FORM</li>
+                <li class='chart-term'>CONCENTRATION</li>
+                <li class='chart-term'>OUTER</li>
+                <li class='chart-term'>GESTURE</li>
+                <li class='chart-term'>SENSATION</li>
+                <li class='chart-term'>INNER MOVEMENT</li>
+                <li class='chart-term'>GIVING</li>
+                <li class='chart-term'>RECEIVING</li>
+                <li class='chart-term'>IMPULSES</li>
+              </ul>
+              <div class='chart-definition'>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
+
     <footer>
       <section class='footer-left'>
         <span>
