--- a/programs.html
+++ b/programs.html
@@ -6,9 +6,8 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-
     <link rel='stylesheet' href='assets/master.css' />
-    <script src='assets/script.js' charset="utf-8"></script>
+    <script src='assets/programs.js' charset="utf-8"></script>
   </head>
   <body>
     <header>
