emma changes part 2

--- a/studio.html
+++ b/studio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Chekhov Acting Studio</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
@@ -32,12 +32,10 @@
     <div id="primary" class="content-area">
       <div class='page-body'>
         <h2 class='page-title'>STUDIO</h2>
-
-        <section class='page-section page-section-gray'>
-          <h2 class='studio-greeting'>Welcome to the Michael Chekhov Acting Studio, home to trainings
-          and workshops based in the work of Michael Chekhov and Clowning
-          for Actors since 1996, in New York City.</h2>
-        </section>
+        <h2 class='studio-greeting'>Welcome to the Michael Chekhov Acting
+          Studio in New York City, home to trainings and workshops based
+          on Michael Chekhov Technique and exploring the actor's work as
+          play since 1996.</h2>
 
         <section class='page-section video-grid'>
           <iframe class='studio-video' width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
