make emma changes part 3

--- a/faculty.html
+++ b/faculty.html
@@ -41,21 +41,21 @@
             </h3>
             <img class='faculty-img' src='assets/images/arnold.jpeg' />
             Founder and Artistic Director of The Moving Dock Theatre Company
-            and Chekhov Studio Chicago. Dawn is a teacher of the Chekhov Technique, 
-            trained by the Michael Chekhov Association (MICHA). She appears in the 
-            documentary, Master Classes in the Michael Chekhov Technique produced 
-            by the Michael Chekhov Association. She has been on the faculty of 
-            Roosevelt University’s Theatre Conservatory, Music Institute of Chicago, 
-            Northern Illinois University, and The Theatre School at DePaul. She is 
-            currently on the Faculty of the Michael Chekhov Association and the 
-            Michael Chekhov Acting Studio New York City, Chekhov Studio Chicago, 
-            and Lyric Opera of Chicago's Patrick G. and Shirley W. Ryan Opera Center. 
-            She is a guest artist around the country in workshops and residencies for 
-            colleges, high schools, and theatre companies. As a movement director and 
-            rehearsal coach, she has worked with Vitalist Theatre, Porchlight Music 
-            Theatre, House Theatre, and Janus Theatre and coaches actors working for 
-            Chicago Shakespeare Theater, Lookingglass Theatre, Goodman Theatre, and 
-            Court Theatre among others, and opera singers at Lyric Opera Chicago's 
+            and Chekhov Studio Chicago. Dawn is a teacher of the Chekhov Technique,
+            trained by the Michael Chekhov Association (MICHA). She appears in the
+            documentary, Master Classes in the Michael Chekhov Technique produced
+            by the Michael Chekhov Association. She has been on the faculty of
+            Roosevelt University’s Theatre Conservatory, Music Institute of Chicago,
+            Northern Illinois University, and The Theatre School at DePaul. She is
+            currently on the Faculty of the Michael Chekhov Association and the
+            Michael Chekhov Acting Studio New York City, Chekhov Studio Chicago,
+            and Lyric Opera of Chicago's Patrick G. and Shirley W. Ryan Opera Center.
+            She is a guest artist around the country in workshops and residencies for
+            colleges, high schools, and theatre companies. As a movement director and
+            rehearsal coach, she has worked with Vitalist Theatre, Porchlight Music
+            Theatre, House Theatre, and Janus Theatre and coaches actors working for
+            Chicago Shakespeare Theater, Lookingglass Theatre, Goodman Theatre, and
+            Court Theatre among others, and opera singers at Lyric Opera Chicago's
             Patrick G. and Shirley W. Ryan Opera Center.
           </div>
           <div class='faculty-card'>
@@ -63,35 +63,35 @@
               AKIL APOLLO DAVIS
             </h3>
             <img class='faculty-img' src='assets/images/akil.jpg' />
-            Performing Artist and Theater Teacher based in NYC. 
-            Akil teaches and develops a rare form of masks and movement. 
-            The former apprentice and on-going collaborator of celebrated mask 
-            teacher Per Brahe. Akil’s movement coaching is further informed in 
-            his extensive training in Balinese dance, Thai Classical dance, Modern 
-            dance, Butoh, African, Ballet, Jazz, Kabuki, and Noh. Akil has taught 
-            Theatre and Dance all over America, in over seven countries, regularly 
-            returning to Bali and Thailand, and has taught Mask and Art Aesthetic at 
-            NYU and SUNY Purchase. An alumni of NYC TISCH School of the Arts,  Founder 
-            and Artistic Director of the new performance company LOUDSOL, 
-            and a Megastar Talent Finalist. 
+            Performing Artist and Theater Teacher based in NYC.
+            Akil teaches and develops a rare form of masks and movement.
+            The former apprentice and on-going collaborator of celebrated mask
+            teacher Per Brahe. Akil’s movement coaching is further informed in
+            his extensive training in Balinese dance, Thai Classical dance, Modern
+            dance, Butoh, African, Ballet, Jazz, Kabuki, and Noh. Akil has taught
+            Theatre and Dance all over America, in over seven countries, regularly
+            returning to Bali and Thailand, and has taught Mask and Art Aesthetic at
+            NYU and SUNY Purchase. An alumni of NYC TISCH School of the Arts,  Founder
+            and Artistic Director of the new performance company LOUDSOL,
+            and a Megastar Talent Finalist.
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
               MELANIA  LEVITSKY
             </h3>
-            <img class='faculty-img' src='assets/images/levitsky.jpeg' />
-            Melania Levitsky is the Artistic Director of Nikita Productions, 
-            and the Associate Artistic Director of Walking the dog Theater Company 
-            Inc. She directs the Shakespeare in the Valley Festival every summer 
-            in upstate NY. She trained in the Michael Chekhov acting technique with 
-            Ted Pugh and Fern Sloan and was a member of The Actors’ Ensemble for 20 
-            years, and is one of the founding members of the Tennessee Shakespeare Company. 
-            She is certified in Level 1 Spacial Dynamics and Bothmer Gymnastics and is 
-            trained in the Werbeck singing technique.  She has taught in the U.S., 
-            The Netherlands and South Africa. She is currently completing a recording 
-            of original songs with a partner in Amsterdam, a children’s book based on a 
-            Kazakh folk tale called, The Gold in the Ground, and recently began creating 
-            custom sculpture portraits.  She believes all art forms are a melding of truth, 
+            <img class='faculty-img' src='assets/images/levitsky.jpg' />
+            Melania Levitsky is the Artistic Director of Nikita Productions,
+            and the Associate Artistic Director of Walking the dog Theater Company
+            Inc. She directs the Shakespeare in the Valley Festival every summer
+            in upstate NY. She trained in the Michael Chekhov acting technique with
+            Ted Pugh and Fern Sloan and was a member of The Actors’ Ensemble for 20
+            years, and is one of the founding members of the Tennessee Shakespeare Company.
+            She is certified in Level 1 Spacial Dynamics and Bothmer Gymnastics and is
+            trained in the Werbeck singing technique.  She has taught in the U.S.,
+            The Netherlands and South Africa. She is currently completing a recording
+            of original songs with a partner in Amsterdam, a children’s book based on a
+            Kazakh folk tale called, The Gold in the Ground, and recently began creating
+            custom sculpture portraits.  She believes all art forms are a melding of truth,
             fantasy, movement, danger and love.
           </div>
           <div class='faculty-card'>
@@ -99,28 +99,28 @@
               JAMES LUSE
             </h3>
             <img class='faculty-img' src='assets/images/luse.jpeg' />
-            Actor, director, and teacher based in CT. James has an MFA 
-            in Theatre Arts from Brandeis University and studied at the 
-            Michael Chekhov Acting Studio in NYC, The International Michael 
-            Chekhov Conference and The Baikal Theatre School, Irkusk, USSR. 
-            James has been a Master Teacher of Acting at Yale & Wesleyan 
-            Universities, the head of Acting at the Broadway Theatre Project, 
-            and a Michael Chekhov specialist at THE NATIONAL THEATRE INSTITUTE. 
-            He has also taught at the Theatre Faculties of WAYNE STATE University, 
+            Actor, director, and teacher based in CT. James has an MFA
+            in Theatre Arts from Brandeis University and studied at the
+            Michael Chekhov Acting Studio in NYC, The International Michael
+            Chekhov Conference and The Baikal Theatre School, Irkusk, USSR.
+            James has been a Master Teacher of Acting at Yale & Wesleyan
+            Universities, the head of Acting at the Broadway Theatre Project,
+            and a Michael Chekhov specialist at THE NATIONAL THEATRE INSTITUTE.
+            He has also taught at the Theatre Faculties of WAYNE STATE University,
             The College of William and Mary, NYU, The American Academy of Dramatic
-            Arts, The Berkshire Theatre Festival, The Virginia Stage Company, 
-            Northern Michigan University, Hampton University, The Virginia 
-            Shakespeare Festival, and the Long Wharf Theatre. James Luse has 
-            directed over 600 productions in regional, stock and academic theatre.  
-            He has acted regionally at the Walking the Dog Theatre/Nikita Productions,  
-            ADVICE TO THE PLAYERS, INC. (NH), Virginia Shakespeare Festival, 
-            Bristol Riverside Theatre,  Jenny Wiley Theatre,  Virginia Stage Company, 
-            The International Stanislavski Theatre Studio, Yale University, Long Wharf, 
-            Shakespeare on the Sound, the Generic Theatre(VA), and in NYC at HERE, The 
-            ARCLIGHT THEATRE, Gorilla Repertory Co., Circle East, The Hunger and Thirst 
-            Theatre Collective, A>N>O>N>Productions, and at NYU.  In New York City, Luse 
-            has performed major roles at The Gallery Players, The Michael Chekhov Acting 
-            Studio & Theatre Festival, and at The Metropolitan Playhouse. He has played 
+            Arts, The Berkshire Theatre Festival, The Virginia Stage Company,
+            Northern Michigan University, Hampton University, The Virginia
+            Shakespeare Festival, and the Long Wharf Theatre. James Luse has
+            directed over 600 productions in regional, stock and academic theatre.
+            He has acted regionally at the Walking the Dog Theatre/Nikita Productions,
+            ADVICE TO THE PLAYERS, INC. (NH), Virginia Shakespeare Festival,
+            Bristol Riverside Theatre,  Jenny Wiley Theatre,  Virginia Stage Company,
+            The International Stanislavski Theatre Studio, Yale University, Long Wharf,
+            Shakespeare on the Sound, the Generic Theatre(VA), and in NYC at HERE, The
+            ARCLIGHT THEATRE, Gorilla Repertory Co., Circle East, The Hunger and Thirst
+            Theatre Collective, A>N>O>N>Productions, and at NYU.  In New York City, Luse
+            has performed major roles at The Gallery Players, The Michael Chekhov Acting
+            Studio & Theatre Festival, and at The Metropolitan Playhouse. He has played
             in UNCLE VANYA as Vanya for the Torn Space Theatre in Buffalo, NY.
           </div>
           <div class='faculty-card'>
@@ -135,7 +135,7 @@
             University, clerking at DC’s Public Defender Service, time as
             a producer, actor, director, a trainer of lead teachers. He
             has been, for the last fifteen years, a Professor at NYU Tisch’s
-            elite Graduate Acting Program. He is the founder of the 
+            elite Graduate Acting Program. He is the founder of the
             <a href='https://www.millervoicemethod.com' target='_blank'>Miller
             Voice Method®</a> and through decades of field and scientific research
             has developed a transformational and repeatable way to embody
@@ -168,19 +168,19 @@
               MEL SHRAWDER
             </h3>
             <img class='faculty-img' src='assets/images/shrawder.jpeg' />
-            Mel has performed with the New York Shakespeare Festival under 
-            the direction of Joseph Papp, and has appeared at Arena Stage in 
-            Washington DC, Portland Stage, and theatres around the world including 
-            London and Paris. As a writer he has recently written two bookend 
-            plays centered around the Native American experience at Carlisle, 
-            and with the Chekhov Studio, he developed a one person show, Homefront, 
-            which was also presented at the International Michael Chekhov Festival 
-            at Amherst under the direction of Lenard Petit. He headed the performance 
-            program at the University of Miami for a number of years where he receive 
-            a faculty grant to study at the National Theatre of Great Britain. He is a 
-            certified Reiki Master, and as well as teaching the Michael Chekhov approach, 
-            Mel includes in his present teaching Energize components based on RYSE work, 
-            and character/personality transformation approaches based on holistic means. 
+            Mel has performed with the New York Shakespeare Festival under
+            the direction of Joseph Papp, and has appeared at Arena Stage in
+            Washington DC, Portland Stage, and theatres around the world including
+            London and Paris. As a writer he has recently written two bookend
+            plays centered around the Native American experience at Carlisle,
+            and with the Chekhov Studio, he developed a one person show, Homefront,
+            which was also presented at the International Michael Chekhov Festival
+            at Amherst under the direction of Lenard Petit. He headed the performance
+            program at the University of Miami for a number of years where he receive
+            a faculty grant to study at the National Theatre of Great Britain. He is a
+            certified Reiki Master, and as well as teaching the Michael Chekhov approach,
+            Mel includes in his present teaching Energize components based on RYSE work,
+            and character/personality transformation approaches based on holistic means.
             Mel appeared in the Michael Chekhov Association's master class instructional DVDs.
           </div>
           <div class='faculty-card'>
@@ -190,16 +190,16 @@
             <img class='faculty-img' src='assets/images/yolan.jpeg' />
             Artistic director of Michael Chekhov Studio Brussels. Natalie specialized in stage
             production and Russian theatrical pedagogics in Russia at Moscow’s Gitis (the Russian
-            Academy of Theatre Arts) and the Vakhtanghov Institute; with teachers Vladimir Skoritz, 
-            Andrei Droznin, Boris Rabey, and Slava Kokorin.  She also followed an intensive training 
-            programme at the Michael Chekhov Acting Studio in New York with Lenard Petit. Since 2003, 
-            she has given courses in Italy, Belgium, France and the United States. She teaches at the 
-            Conservatoire de Liège and at the Conservatoire de Roubaix, France, at the Samovar in Paris 
-            and at the Michael Chekhov Acting Studio in New York.  She also works as a consultant for the 
-            City of Brussels for the ‘Dispositif d’Accrochage Scolaire’. She stages the authors Victor 
-            Haïm, Jean-Claude Grumberg, Joël Pommerat, Daniil Kharms and Anton Tchekhov. She has collaborated 
-            with film director Boris Lehman, and film directors and performance artists Vincent Matijn-Wallecan, 
-            Patricia Martin, Marc Rossignol, Dominique Thirion, Angel Vergara, Melanie Rullier, Anne-Cécile 
+            Academy of Theatre Arts) and the Vakhtanghov Institute; with teachers Vladimir Skoritz,
+            Andrei Droznin, Boris Rabey, and Slava Kokorin.  She also followed an intensive training
+            programme at the Michael Chekhov Acting Studio in New York with Lenard Petit. Since 2003,
+            she has given courses in Italy, Belgium, France and the United States. She teaches at the
+            Conservatoire de Liège and at the Conservatoire de Roubaix, France, at the Samovar in Paris
+            and at the Michael Chekhov Acting Studio in New York.  She also works as a consultant for the
+            City of Brussels for the ‘Dispositif d’Accrochage Scolaire’. She stages the authors Victor
+            Haïm, Jean-Claude Grumberg, Joël Pommerat, Daniil Kharms and Anton Tchekhov. She has collaborated
+            with film director Boris Lehman, and film directors and performance artists Vincent Matijn-Wallecan,
+            Patricia Martin, Marc Rossignol, Dominique Thirion, Angel Vergara, Melanie Rullier, Anne-Cécile
             Vandalem, Alain Wathieu Boris Rabey, Matthias Langhoff, Isabelle Pousseur, and Slava Kokorin.
           </div>
         </section>
