replace contact image

--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,9 @@
               <span>New York, New York 10011</span>
             </section>
           </div>
-          <div class='contact-grid-item'>
-            <img class='contact-diagram' src='assets/images/diagram.jpeg'/>
+          <div class='contact-grid-image'>
+            <img class='contact-image' src='assets/images/blake1.jpg' />
+            <div class='contact-image-source'>William Blake</div>
           </div>
         </div>
       </div>
