--- a/lenard.html
+++ b/lenard.html
@@ -86,7 +86,7 @@
         <section class='lenard-chart-container'>
           <h3 class='section-header'>LENARD'S APPROACH</h3>
           <div class='lenard-chart'>
-            <img class='chart-image' src='assets/images/diagram.jpeg' />
+            <img class='chart-image' src='assets/images/diagram.png' />
             <div class='chart-explanation'>
               <ul class='chart-terms'>
                 <li class='chart-term'>ENERGY</li>
