--- a/programs.html
+++ b/programs.html
@@ -36,7 +36,7 @@
         <div class='programs-container'>
           <li class='program-card program-card-full-width'>
             <div class='program-card-title program-card-hidden'>ART OF THE ACTOR</div>
-            <img class='art-of-the-actor' src='assets/images/aota-test.jpg'></img>
+            <img class='art-of-the-actor' src='assets/images/aota.jpg'></img>
           </li>
           <div class='programs-grid'>
             <li class='program-card gold'>
